# vast

./: addDLL-VC7.bat
trunk/VAST/: CHANGES.txt  CMakeLists.txt  CODING.TXT  IDGenerator.cpp  IDGenerator.h  INSTALL.txt  Makefile  Manager.cpp  Manager.h  Peer.cpp  Peer.h  README-VAST.bin.txt  README.txt  VAST.cpp  VAST.sln  VASTVerse.cpp  VAST_vc9.vcproj  clean  clean.bat
trunk/VAST/Demo/: CMakeLists.txt
trunk/VAST/Demo/VASTATEsim_console/: Makefile  VASTATEsim_console.cpp  VASTATEsim_console.vcproj
trunk/VAST/Demo/VASTsim_console/: Makefile  VASTsim_console-vc9.vcproj  VASTsim_console-vc9.vcxproj  VASTsim_console-vc9.vcxproj.filters  VASTsim_console.cpp
trunk/VAST/Demo/VASTsim_consoleDev/: Makefile  VASTsim_console.cpp  VASTsim_consoleDev.vcproj
trunk/VAST/Demo/VASTsim_gui/: VASTsim_gui-vc9.vcproj  VASTsim_gui-vc9.vcxproj  VASTsim_gui-vc9.vcxproj.filters  VASTsim_gui.cpp
trunk/VAST/Demo/demo_chatva/: chatva.cpp  demo_chatva-vc9.vcproj  demo_chatva-vc9.vcxproj  demo_chatva-vc9.vcxproj.filters  server.bat
trunk/VAST/Demo/demo_console/: Makefile  SConstruct  demo_console.cpp  demo_console.vcproj  demo_console.vcxproj  demo_console.vcxproj.filters
trunk/VAST/Demo/demo_console_C/: demo_console_C.cpp  demo_console_C.vcproj  demo_console_C.vcxproj  demo_console_C.vcxproj.filters
trunk/VAST/Demo/test_console/: CMakeLists.txt  Makefile  test_console.cpp  test_console.vcproj  test_console.vcxproj  test_console.vcxproj.filters
trunk/VAST/VAST/: CMakeLists.txt  IDGenerator.cpp  IDGenerator.h  Makefile  Relay.cpp  Relay.h  SConstruct  Topology.cpp  VASTClient.cpp  VASTClient.h  VASTMatcher.cpp  VASTMatcher.h  VASTRelay.cpp  VASTThread.cpp  VASTThread.h  VASTVerse.cpp  VAST_vc9.vcproj  VAST_vc9.vcproj-backup  VAST_vc9.vcxproj  VAST_vc9.vcxproj.filters  VONNetwork.h  VONPeer.cpp  VONPeer.h  VSOPeer.cpp  VSOPeer.h  VSOPolicy.h
trunk/VAST/VAST/old/: Peer.h  Topology.cpp  vast_dc.h  vast_fo.cpp  vastatesim.h  vastid.h  vastid_base.h
trunk/VAST/VASTATE/: AgentImpl.cpp  AgentImpl.h  AgentLogic.cpp  ArbitratorImpl.cpp  ArbitratorImpl.h  ArbitratorLogic.cpp  Makefile  SConstruct  StorageCS.cpp  StorageCS.h  VASTATE.cpp  VASTATE.vcproj  VASTATETypes.cpp
trunk/VAST/VASTATEsim/: Makefile  SConstruct  SimAgent.cpp  SimAgent.h  SimArbitrator.cpp  SimArbitrator.h  SimPeer.cpp  SimPeer.h  Statistics.h  VASTATEsim-2ndlife.ini  VASTATEsim.cpp  VASTATEsim.h  VASTATEsim.ini  VASTATEsim.vcproj
trunk/VAST/VASTnet/: CMakeLists.txt  IDMapper.h  Makefile  MessageHandler.cpp  MessageQueue.cpp  SConstruct  VASTnet.cpp  VASTnet.vcproj  VASTnet.vcxproj  VASTnet.vcxproj.filters  net_ace.cpp  net_ace.h  net_ace_acceptor.h  net_ace_handler.cpp  net_ace_handler.h  net_emu.cpp  net_emu.h  net_emu_bl.cpp  net_emu_bl.h  net_emubridge.cpp  net_emubridge.h  net_emubridge_bl.cpp  net_emubridge_bl.h  net_manager.cpp
trunk/VAST/VASTsim/: CMakeLists.txt  Makefile  SConstruct  SimNode.cpp  SimNode.h  Statistics.h  VASTsim.cpp  VASTsim.h  VASTsim.ini  VASTsim.vcproj  VASTsim.vcxproj  VASTsim.vcxproj.filters
trunk/VAST/VASTsimDev/: ClusterMovement.h  GroupMovement.h  Makefile  Movement.h  MovementGenerator.cpp  RandomMovement.h  ReadFunc.cpp  ReadFunc.h  SimNode.cpp  SimNode.h  Statistics.h  VASTsim.cpp  VASTsim.h  VASTsim.ini  VASTsimDev.vcproj  Vivaldi.cpp  Vivaldi.h
trunk/VAST/Wrappers/: VAST.ini  clean.bat
trunk/VAST/common/: CMakeLists.txt  Compressor.cpp  Config.h  Makefile  MessageHandler.h  MessageQueue.h  Movement.h  MovementGenerator.cpp  StdIO_SectionedFile.cpp  Topology.h  VAST.h  VASTATE.h  VASTATETypes.h  VASTBuffer.h  VASTCallback.h  VASTRelay.h  VASTTypes.h  VASTUtil.cpp  VASTUtil.h  VASTVerse.h  VASTnet.h  Voronoi.h  VoronoiSF.cpp  VoronoiSF.h  common.vcproj  common.vcxproj  common.vcxproj.filters  net_manager.h  net_msg.h
trunk/VAST/old/: msghandler.cpp  vast_dc.cpp
trunk/VAST/scripts/: run-10-test-clients.bat
(+1501 files in other folders)
